# linkedin-profile-llm-analyser

./: .gitignore  hugging_face_local_pipeline.py  main.py  pyproject.toml
linkedin-python-scrapy-scraper-master/: profile.json
linkedin-python-scrapy-scraper-master/linkedin/: settings.py
linkedin-python-scrapy-scraper-master/linkedin/spiders/: linkedin_people_profile.py
linkedin_scrapper/: profile.json
linkedin_scrapper/linkedin/: settings.py
linkedin_scrapper/linkedin/spiders/: linkedin_people_profile.py
reference/: hugging_face_helper.py  serp_api_helper.py
